vlib/v/checker/tests/assign_to_typeless_variable_err.out
vlib/v/checker/tests/assign_to_typeless_variable_err.vv:2:2: warning: unused variable: `val`
    1 | fn main() {
    2 |     val := {}
      |     ~~~
    3 |     val = 1
    4 | }
vlib/v/checker/tests/assign_to_typeless_variable_err.vv:2:9: error: invalid empty map initialisation syntax, use e.g. map[string]int{} instead
    1 | fn main() {
    2 |     val := {}
      |            ~~
    3 |     val = 1
    4 | }
vlib/v/checker/tests/assign_to_typeless_variable_err.vv:3:2: error: `val` is immutable, declare it with `mut` to make it mutable
    1 | fn main() {
    2 |     val := {}
    3 |     val = 1
      |     ~~~
    4 | }
vlib/v/checker/tests/assign_to_typeless_variable_err.vv:3:8: error: cannot assign to `val`: expected `void`, not `int literal`
    1 | fn main() {
    2 |     val := {}
    3 |     val = 1
      |           ^
    4 | }
