vlib/v/checker/tests/assign_to_typeless_variable_err.vv
fn main() {
  val := {}
  val = 1
}
